--- a/src/app/hotels/hotel-listing/hotel-listing.component.html
+++ b/src/app/hotels/hotel-listing/hotel-listing.component.html
@@ -17,14 +17,16 @@
           </div>
           <div class="col-6">
             <div class="card-deck">
-              <div class="card">
+             <ng-container *ngFor="let hotel of hotels; let i = index">
+              <div class="card mb-3">
                 <div class="card-body">
-                  <p class="card-text"><b>Name:</b> [name]</p>
-                  <p class="card-text"><b>Price:</b> [price]</p>
-                  <p class="card-text"><b>City:</b> [city]</p>
+                  <p class="card-text"><b>Name:</b> {{hotel.name}}</p>
+                  <p class="card-text"><b>Price:</b> {{hotel.price}}</p>
+                  <p class="card-text"><b>City:</b> {{hotel.city}}</p>
                 </div>
               </div>
-              <!-- <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div> -->
+              <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
+             </ng-container>
             </div>
           </div>
         </div>
